Add u.briefy.co as a possible hostname

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -65,6 +65,7 @@ http {
   server {
     listen 80;
     server_name briefyhq-rolleiflex
+                u.briefy.co
                 rolleiflex.briefy.co
                 rolleiflex.stg.briefy.co;
 
